--- a/08 - Avançando no Javascript/01 - Jogo da adivinhação/style.css
+++ b/08 - Avançando no Javascript/01 - Jogo da adivinhação/style.css
@@ -20,6 +20,23 @@ body, button, input {
     font-family: "DM Sans", sans-serif;
 }
 
+button {
+    background-color: #7879f1;
+    color: white;
+    font-weight: bold;
+    border-radius: 0 .4rem .4rem 0;
+    cursor: pointer;
+    transition: background .3s;
+}
+
+button:hover {
+    background-color: #6565da;
+}
+
+.hide {
+    display: none;
+}
+
 main{
     background: #ffffff;
     box-shadow: 0 .2rem .4rem rgba(0, 0, 0, 0.1);
@@ -33,6 +50,8 @@ main{
     text-align: center;
 }
 
+
+/* Screen1 */
 h1 {
     font-family: "Montserrat", sans-serif;
     font-size: 2.4rem;
@@ -50,4 +69,29 @@ p {
 
 form {
     margin-top: 4.8rem;
+    display: flex;
+    justify-content: center;
+}
+
+input, button {
+    border: none;
+    padding: 1.6rem;
+}
+
+input {
+    background-color: #dce2e9;
+    width: 7rem;
+    border-radius: .4rem 0 0 .4rem;
+}
+
+/* Screen2 */
+h2 {
+    font-size: 2.4rem;
+    font-weight: normal;
+
+    margin-bottom: 3.3rem;
+}
+
+.screen2 button {
+    border-radius: 1.4rem;
 }
